src/styles.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
body {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  grid-template-rows: 100px 1fr 60px;
  grid-template-areas:
    "header header header"
    "main main main"
    "footer footer footer";
  /* background-color: rgb(156, 215, 243); */
  background-image: url("./resources/pexels-jplenio-3131634.jpg");
  background-size: cover;
  font-family: "Montserrat", sans-serif;
}
h2,
h3 {
  color: rgb(253, 253, 253);
  margin: 1rem 0 1rem 0;
  font-size: 2rem;
}
#header {
  grid-area: header;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}
#header div input {
  anchor-name: --search-bar;
}
input {
  width: 30rem;
  height: 3.5rem;
  border-radius: 2rem;
  border: 2px solid white;
  padding-left: 1rem;
  font-size: 1.8rem;
  color: rgb(54, 54, 54);
}
#header > div button {
  border: none;
  position: absolute;
  position-anchor: --search-bar;
  position-area: right;
  left: -4.9rem;
  height: 3.5rem;
  border-radius: 0 2rem 2rem 0;
  width: 6rem;
  background-color: rgb(49, 142, 230);
  font-size: 1.4rem;
  font-weight: 500;
  color: white;
}
input:focus {
  outline: none;
}
#header > div button:hover {
  background-color: rgb(34, 99, 160);
  color: white;
}
#content {
  grid-area: main;
  height: 100%;
}
#footer {
  grid-area: footer;
}
.weather-card {
  display: flex;
  flex-direction: column;
  padding: 10px;
  margin: 10px;
  height: 250px;
  flex-basis: 200px;
  flex-grow: 0;
  flex-shrink: 0;
  padding-top: 1.3rem;
  align-items: center;
  gap: 0.3rem;
  transition: all 0.15s ease-in-out;

  background-color: rgba(240, 240, 240, 0.966);
  border-radius: 1rem;
  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.13);
}
.weather-card * {
  cursor: default;
}
.weather-card img {
  grid-area: icon;
  margin-bottom: 1rem;
}
.weather-card p:first-of-type {
  font-size: 1.1rem;
  font-weight: 700;
  grid-area: date;
}
.weather-card p:nth-of-type(2) {
  font-size: 1.4rem;
  grid-area: temp;
}
.weather-card p:nth-of-type(3) {
  font-size: 1rem;
  font-style: italic;
  grid-area: windspeed;
}
.weather-card p:nth-of-type(4) {
  font-style: italic;
  font-weight: 500;
  grid-area: downfall;
}
#weather-item {
  display: flex;
  position: relative;
  overflow-x: scroll;
  overflow-y: hidden;
  white-space: nowrap;
  scrollbar-color: white rgba(255, 255, 255, 0);
}
#weather-container {
  display: flex;
  flex-direction: column;
  padding: 3rem;
  margin: 0 1rem 0 1rem;
}
#weather-container > h3 {
  align-self: center;
  font-size: 1.8rem;
}
.error {
  font-size: 1.5rem;
  color: rgb(233, 231, 231);
  align-self: center;
}
.expanded {
  flex-basis: 600px;
  height: 500px;
  display: grid;
  justify-content: space-around;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 4fr;
  grid-template-areas:
    ". icon ."
    ". date ."
    "downfall windspeed temp"
    "graph graph graph";
}
.expanded * {
  justify-self: center;
  align-self: center;
}
.graph {
  grid-area: graph;
}
.loading {
  font-size: 2rem;
  color: white;
  align-self: center;
}

